--- a/Client/src/styles/globals.css
+++ b/Client/src/styles/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&family=Poppins:wght@100;200&display=swap');
+
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -719,3 +721,7 @@ body {
     row-gap: 15px;
   }
 }
+
+
+
+
